--- a/package.json
+++ b/package.json
@@ -6,12 +6,25 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
+    "body-parser": "~1.13.3",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "express": "~4.13.4",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
-  }
+    "serve-favicon": "~2.3.0",
+    "multer": "~1.1.0"
+  },
+  "description": "- For first time only: `npm install` to install all node packages - then, go terminal and type: `npm start` to start app - go to: http://localhost:3000 in browser or using `curl`",
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/anthonywongkc/GoGoTripperBook.git"
+  },
+  "author": "",
+  "license": "BSD-2-Clause",
+  "bugs": {
+    "url": "https://github.com/anthonywongkc/GoGoTripperBook/issues"
+  },
+  "devDependencies": {}
 }
